Fix item gap

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ a{
     margin-bottom: 100px;
 }
 
+.flex-row > div {
+    margin-bottom: 25px;
+}
+
 
 .h3, h3 {
     font-size: 1.75rem;
